# dynette

./: .dynette.rb.swp  .gitignore  Gemfile  Procfile  README.md  app.py  config.json.j2  config.ru  config.yml  config.yml.example  delete.html  dynette.cron.py  dynette.rb  gunicorn.py  pyproject.toml  regen_named_conf.py  requirements.txt  wsgi.py
.github/workflows/: tests.yml
src/dynette/: app.py  client.py  config.py  delete_domain.py  dnstap_monitor.py  dnstap_stats.py  dynette.py  migrate_old_db.py  migrate_old_zones.py  regen_named_conf.py  shodohflo  wsgi.py
src/dynette/templates/: named.conf.j2  named.conf.local.j2  tld.conf.j2  zone.conf.j2  zone.db.j2
templates/: named.conf.j2
tests/: test_dynette.py
