[project]
name = "dynette"
version = "1.0.0"
description = "YunoHost DynDNS Server"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "YunoHost", email = "yunohost@yunohost.org" }
]
urls.Repository = "https://github.com/yunohost/dynette"

requires-python = ">=3.9"
dependencies = [
    # "async-timeout==4.0.2",
    "bcrypt==4.0.1",
    # "click==8.1.3",
    # "commonmark==0.9.1",
    # "Deprecated==1.2.13",
    "Flask==2.3.2",
    "Flask-Limiter==3.5.0",
    "gunicorn==20.1.0",
    # "importlib-metadata==6.0.0",
    # "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    # "limits==3.1.6",
    # "MarkupSafe==2.1.2",
    # "ordered-set==4.1.0",
    # "packaging==23.0",
    # "Pygments==2.15.0",
    "PyYAML==6.0.3",
    "redis==4.5.4",
    # "rich==12.6.0",
    "Werkzeug==2.3.3",
    # "wrapt==1.14.1",
    # "zipp==3.11.0",
]

[dependency-groups]
lint = [
    "ruff",
    "mypy",
]

[project.scripts]
regen_named_conf = "dynette.regen_named_conf:main"

[tool.uv]
package = true
