[project]
name = "dynette"
version = "1.0.0"
description = "YunoHost DynDNS Server"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "YunoHost", email = "yunohost@yunohost.org" }
]
urls.Repository = "https://github.com/yunohost/dynette"

requires-python = ">=3.9"
dependencies = [
    # "async-timeout==4.0.2",
    "bcrypt==4.0.1",
    # "click==8.1.3",
    # "commonmark==0.9.1",
    # "Deprecated==1.2.13",
    "Flask==2.3.2",
    "Flask-Limiter==3.5.0",
    "gunicorn==20.1.0",
    # "importlib-metadata==6.0.0",
    # "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    # "limits==3.1.6",
    # "MarkupSafe==2.1.2",
    # "ordered-set==4.1.0",
    # "packaging==23.0",
    # "Pygments==2.15.0",
    "PyYAML==6.0.3",
    "redis==4.5.4",
    # "rich==12.6.0",
    "Werkzeug==2.3.3",
    # "wrapt==1.14.1",
    # "zipp==3.11.0",
]

[dependency-groups]
lint = [
    "ruff",
    "mypy",
]

[project.scripts]
regen_named_conf = "dynette.regen_named_conf:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "YTT",      # flake8-2020
    "ANN",      # flake8-annotations
    "BLE",      # flake8-blind-except
    "B",        # flake8-bugbear
    "A",        # flake8-builtins
    "C4",       # flake8-comprehensions
    "DTZ",      # flake8-datetimez
    "ISC",      # flake8-implicit-str-concat
    "ICN",      # flake8-import-conventions
    "LOG",      # flake8-logging
    "G",        # flake8-logging-format
    "PIE",      # flake8-pie
    "Q",        # flake8-quotes
    "RET",      # flake8-return
    "SIM",      # flake8-simplify
    "SLOT",     # flake8-slots
    "PTH",      # flake8-use-pathlib
    "FLY",      # flynt
    "I",        # isort
    "N",        # pep8-naming
    "PERF",     # Perflint
    "E",        # pycodestyle
    "W",        # pycodestyle
    "F",        # Pyflakes
    "PL",       # Pylint
    "UP",       # pyupgrade
    "FURB",     # refurb
    "RUF",      # Ruff-specific rules
    "TRY",      # tryceratops
    # "D",
]
ignore = [
    "ANN401",   # any-type
    "COM812",   # missing-trailing-comma
    "D203",     # incorrect-blank-line-before-class
    "PLR0911",  # too-many-return-statements
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0915",  # too-many-statements
    "PLR2004",  # magic-value-comparison
    "UP009",    # utf8-encoding-declaration
    "TRY003",   # raise-vanilla-args
    "D100",     # undocumented-public-module
    "D104",     # undocumented-public-package
    "D105",     # undocumented-magic-method
    "D200",     # unnecessary-multiline-docstring
    "D212",     # multi-line-summary-first-line
    "D401",     # non-imperative-mood
]

[tool.mypy]
strict = true
